welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
fleur(c:Color)
{
  setCouleurBrosse(c)
  baisseBrosse()
  avance(2)
  recule()
  droite()
  avance()
  recule(2)
  avance()
  setCouleurBrosse(Color.yellow)
  gauche()
}

growFlowers()
{
  fleur(Colror.red)
  avance(3)
  fleur(Colror.cyan)
  recule(6)
  droite()
  avance(2)
  gauche()
  avance(2)
  fleur(Colror.orange)
  recule(3)
  droite()
  avance(2)
  gauche()
  fleur(Colror.pink)
  avance(3)
  fleur(Colror.green)
}